css/wufoo.css
/* ==========================================================================
 Wufoo Contact Form Styles
========================================================================== */
.wufoo .info {
	display: none !important;
}

input[type="text"],
input[type="email"],
input[type="password"],
textarea,
textarea.textarea {
	background: #fff;
	border: 1px solid #bfbfbf;
	border-radius: 3px;
	box-shadow: 0 1px 1px 0 #d9d9d9;
	display: block;
	font-size: 18px;
	outline: none !important;
	padding: 12px;
	transition: all .25s ease-in-out;
	width: 100%;
}

input[type="text"]:focus,
input[type="email"]:focus,
input[type="password"]:focus, 
textarea:focus,
textarea.textarea:focus {
	border-color: #2781a0;
}

textarea {
	min-height: 120px;
}

#form2 {padding: 0;}

#form2 ul {margin: 0 0 1em;}

#form2 li {margin: 1em 0 0;}

#form2 li:first-child {margin: 0;}

#form2 #saveForm {
	display: block;
	width: 100%;
}

#saveForm {
	background: #57b5d6;
	border: none;
	border-radius: 3px;
	color: #fff;
	display: inline-block;
	font-size: 22px;
	padding: 16px;
	text-align: center;
	transition: all 0.2s ease;
}

#saveForm:hover {background: #6bbedb;}

.wufoo li.focused {
	background: none;
}

#form2 li, #form2 li.buttons {
	padding: 0;
}

/* Error Styles */
#form2 #errorLi {
	display: none;
}

#form2 li.error {
	background-color: none !important;
}

.wufoo label.desc, .wufoo legend.desc {
	font-size: 14px;
}

